--- a/index.html
+++ b/index.html
@@ -1,4 +1,38 @@
-<!doctype html><html>
-<head><title>🏗️</title></head>
-<body>Under Construction... 🏗️👷🚧 </body>
-</html>
+ <!doctype html><html>
+ <head>
+   <title> SSK 👩🏻‍💼 </title>
+   <link rel="stylesheet" href="style.css">
+   <link
+   rel="stylesheet"
+   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+   />
+ </head>
+ 
+ <body>
+   <!-- Under Construction... 🏗️👷🚧 -->
+   <div class="context">
+   <h1 class="animate__animated animate__rubberBand">Hi there! <span class="wave">👋</span> </h1>
+   <h2 class="animate__animated animate__fadeInUp animate__delay-1s"> I am Sadhana, a passionate Hedge Fund Accountant from Bengaluru.</h2>
+   <!-- <h1>Pure Css Animated Background</h1> -->
+ </div>
+ 
+ 
+ <div class="area" >
+         <ul class="circles">
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+         </ul>
+ </div >
+ 
+ 
+   <!-- <button>Retype</button> -->
+ </body>
+ </html>
